<resources>
    <string name="app_name">SemTrack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="completed">Completed</string>
    <string name="completed_count">(%1$d)</string>
    <string name="delete_completed">Delete completed</string>
    <string name="delete_completed_title">Delete completed tasks?</string>
    <string name="delete_completed_message">This will permanently delete all completed tasks.</string>
    <string name="list_option_rename">Rename list</string>
    <string name="list_option_delete">Delete list</string>
    <string name="delete_list_title">Delete list?</string>
    <string name="delete_list_message">This will permanently delete the list and all tasks in it.</string>
    <string name="toggle_completed">Toggle completed</string>
    <string name="attendance_title">Courses</string>
    <string name="attendance_subtitle">Attendance dashboard</string>
    <string name="add_course_title">Add course</string>
    <string name="rename_course_title">Rename course</string>
    <string name="course_option_rename">Rename course</string>
    <string name="course_option_delete">Delete course</string>
    <string name="delete_course_title">Delete course?</string>
    <string name="delete_course_message">This will permanently delete the course and all attendance entries.</string>
    <string name="course_name_required">Course name is required.</string>
    <string name="course_name_duplicate">A course with this name already exists.</string>
    <string name="course_name_hint">Course name</string>
    <string name="attendance_percent_placeholder">0% Attendance</string>
    <string name="attendance_classes_placeholder">0 / 0 Classes</string>
    <string name="attendance_card_percent">%1$.2f%% Attendance</string>
    <string name="attendance_card_classes">%1$d / %2$d Classes</string>
    <string name="attendance_present_label">Present</string>
    <string name="attendance_absent_label">Absent</string>
    <string name="attendance_percent_label">Attendance %</string>
    <string name="attendance_total_label">Total</string>
    <string name="attendance_pick_date">Pick date</string>
    <string name="attendance_pick_date_title">Select date</string>
    <string name="attendance_mark_present">Mark Present</string>
    <string name="attendance_mark_absent">Mark Absent</string>
    <string name="attendance_view_history">View Attendance History</string>
    <string name="attendance_history_title">History</string>
    <string name="attendance_status_present">Present</string>
    <string name="attendance_status_absent">Absent</string>
    <string name="attendance_present_total">%1$d / %2$d</string>
    <string name="attendance_absent_count">%1$d</string>
    <string name="attendance_percent_value">%1$.2f%%</string>
    <string name="attendance_already_marked">Attendance already marked for this date.</string>
    <string name="attendance_marked_message">Attendance saved.</string>
    <string name="attendance_change_title">Change attendance?</string>
    <string name="attendance_change_message">Attendance for this date is already marked as %1$s. Change to %2$s?</string>
    <string name="attendance_entry_options_title">Entry options</string>
    <string name="attendance_entry_delete">Delete entry</string>
    <string name="attendance_delete_title">Delete entry?</string>
    <string name="attendance_delete_message">This will delete attendance for %1$s.</string>
    <string name="attendance_safe_skips_label">Safe Skips</string>
    <string name="attendance_required_classes_label">Required Classes</string>
    <string name="attendance_safe_skips_placeholder">--</string>
</resources>